<resources>
    <string name="app_name">LeiriFit</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="age">Idade</string>
    <string name="name">Nome</string>
    <string name="nodData"><u>Não quero dar os meus dados nem aparecer no ranking</u>.</string>
    <string name="start">Iniciar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempo">Tempo</string>
    <string name="distancia">Distancia</string>
    <string name="_17_36">17:36</string>
    <string name="_2_36">2.36</string>
    <string name="km">Km</string>
    <string name="jardim_lu_s_de_cam_es">Jardim Luís de Camões</string>
    <string name="proxima_paragem">Proxima paragem:</string>
    <string name="iniciar">Iniciar</string>
    <string name="camera">Camera</string>
    <string name="desenvolvido_por_marco_oliveira_e_oleksandr_gevko">Desenvolvido por Marco Oliveira e Oleksandr Gevko</string>
    <string name="leirifit">LeiriFit</string>
    <string name="todo">TODO</string>
    <string name="image_leiria">Image leiria</string>


    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Inicio:</b>]]></string>
    <string name="end_time"><![CDATA[<b>Fim:</b>]]></string>
    <string name="distance"><![CDATA[<b>Distancia:</b>]]></string>
    <string name="hours_run"><![CDATA[<b>Horas:Minutos:Segundos</b>]]></string>
    <string name="name_list"><![CDATA[<b>Nome:</b>]]></string>
    <string name="age_list"><![CDATA[<b>Idade:</b>]]></string>
    <string name="sex_list"><![CDATA[<b>Genero:</b>]]></string>




</resources>